// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body should render styles for size lg 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: calc(1.125 * var(--lendi-ui-size));
  line-height: calc(24 / 18);
  font-family: 'Open Sans',sans-serif;
}

<styled.p
  size="lg"
>
  <p
    className="c0"
    size="lg"
  />
</styled.p>
`;

exports[`Body should render styles for size md 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: var(--lendi-ui-size);
  line-height: calc(24 / 16);
  font-family: 'Open Sans',sans-serif;
}

<styled.p
  size="md"
>
  <p
    className="c0"
    size="md"
  />
</styled.p>
`;

exports[`Body should render styles for size sm 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: calc(0.875 * var(--lendi-ui-size));
  line-height: calc(20 / 14);
  font-family: 'Open Sans',sans-serif;
}

<styled.p
  size="sm"
>
  <p
    className="c0"
    size="sm"
  />
</styled.p>
`;

exports[`Body should render styles for size undefined 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  font-family: 'Open Sans',sans-serif;
}

<styled.p>
  <p
    className="c0"
  />
</styled.p>
`;
